--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -355,7 +355,7 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDu-Zm-2GZ" customClass="CosmosView" customModule="Cosmos">
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDu-Zm-2GZ" customClass="CosmosView" customModule="Cosmos">
                                                     <rect key="frame" x="23" y="-51" width="111" height="19"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <userDefinedRuntimeAttributes>
@@ -399,13 +399,13 @@
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Place Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Nc-Lr-ZgM">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Place Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Nc-Lr-ZgM">
                                                     <rect key="frame" x="23" y="-79" width="340" height="24"/>
                                                     <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="20"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="restaurant_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="g8h-R3-pJJ">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="restaurant_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="g8h-R3-pJJ">
                                                     <rect key="frame" x="23" y="-118" width="36" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="36" id="1FD-fz-tO5"/>
@@ -938,55 +938,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lo1-g3-3S3">
-                                <rect key="frame" x="139" y="230" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lo1-g3-3S3">
+                                <rect key="frame" x="75.5" y="229" width="224" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="GCk-cU-U6K"/>
+                                    <constraint firstAttribute="width" constant="224" id="t91-NJ-pBh"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pd1-UD-OOl">
-                                <rect key="frame" x="139" y="286" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pd1-UD-OOl">
+                                <rect key="frame" x="75.5" y="289" width="224" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="A4j-uV-dcA"/>
+                                    <constraint firstAttribute="width" constant="224" id="JHW-or-C1H"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X8s-Gt-4ad">
-                                <rect key="frame" x="164" y="335" width="46" height="30"/>
-                                <state key="normal" title="Login"/>
-                                <connections>
-                                    <action selector="login:" destination="kIH-4I-EJE" eventType="touchUpInside" id="WZ9-vJ-mwx"/>
-                                    <segue destination="YiW-4H-yoa" kind="show" identifier="loginSuccess" id="MYO-zy-YgY"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lpC-3j-dOd">
-                                <rect key="frame" x="157" y="373" width="61" height="27"/>
+                                <rect key="frame" x="157" y="391" width="61" height="27"/>
                                 <state key="normal" title="Sign up"/>
-                                <connections>
-                                    <action selector="signup:" destination="kIH-4I-EJE" eventType="touchUpInside" id="lfD-F0-UaB"/>
-                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nnK-vz-c9E">
+                                <rect key="frame" x="117" y="443" width="141" height="30"/>
+                                <state key="normal" title="Login with Facebook"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X8s-Gt-4ad">
+                                <rect key="frame" x="164" y="344" width="46" height="30"/>
+                                <state key="normal" title="Login"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lpC-3j-dOd" firstAttribute="top" secondItem="X8s-Gt-4ad" secondAttribute="bottom" constant="8" id="7Hj-4N-1Ji"/>
-                            <constraint firstItem="Pd1-UD-OOl" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="JtO-G9-TIl"/>
-                            <constraint firstItem="lpC-3j-dOd" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="RmS-ri-wt3"/>
-                            <constraint firstItem="Pd1-UD-OOl" firstAttribute="centerY" secondItem="ZaX-CN-kLj" secondAttribute="centerY" id="UpA-mm-fUZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="X8s-Gt-4ad" secondAttribute="trailing" constant="149" id="dWV-xv-Prp"/>
-                            <constraint firstItem="Pd1-UD-OOl" firstAttribute="top" secondItem="Lo1-g3-3S3" secondAttribute="bottom" constant="26" id="pCM-un-5Fx"/>
-                            <constraint firstItem="X8s-Gt-4ad" firstAttribute="top" secondItem="Pd1-UD-OOl" secondAttribute="bottom" constant="19" id="xaE-Nk-aFb"/>
-                            <constraint firstItem="Lo1-g3-3S3" firstAttribute="leading" secondItem="ZaX-CN-kLj" secondAttribute="leadingMargin" constant="123" id="ykB-OV-kir"/>
+                            <constraint firstItem="nnK-vz-c9E" firstAttribute="top" secondItem="lpC-3j-dOd" secondAttribute="bottom" constant="22" id="9SF-Dj-PhS"/>
+                            <constraint firstItem="Lo1-g3-3S3" firstAttribute="top" secondItem="esD-q9-SqY" secondAttribute="bottom" constant="209" id="VZ6-74-8PX"/>
+                            <constraint firstItem="lpC-3j-dOd" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="dZR-h6-Joj"/>
+                            <constraint firstItem="Pd1-UD-OOl" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="eIE-Kk-CoM"/>
+                            <constraint firstItem="X8s-Gt-4ad" firstAttribute="top" secondItem="Pd1-UD-OOl" secondAttribute="bottom" constant="25" id="fJl-D6-BBc"/>
+                            <constraint firstItem="Lo1-g3-3S3" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="gpy-9a-ZE8"/>
+                            <constraint firstItem="lpC-3j-dOd" firstAttribute="top" secondItem="X8s-Gt-4ad" secondAttribute="bottom" constant="17" id="j13-Yj-WuF"/>
+                            <constraint firstItem="Pd1-UD-OOl" firstAttribute="top" secondItem="Lo1-g3-3S3" secondAttribute="bottom" constant="30" id="oks-Ph-7gY"/>
+                            <constraint firstItem="nnK-vz-c9E" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="rv8-d3-kRu"/>
+                            <constraint firstItem="X8s-Gt-4ad" firstAttribute="centerX" secondItem="ZaX-CN-kLj" secondAttribute="centerX" id="zFa-2U-wLD"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="passwordField" destination="Pd1-UD-OOl" id="W92-WT-VrF"/>
-                        <outlet property="usernameField" destination="Lo1-g3-3S3" id="v8z-Al-9Ta"/>
+                        <outlet property="facebookButton" destination="nnK-vz-c9E" id="L7U-7z-faY"/>
+                        <outlet property="loginButton" destination="X8s-Gt-4ad" id="VNt-3c-65m"/>
+                        <outlet property="passwordTextField" destination="Pd1-UD-OOl" id="bKu-Ez-98R"/>
+                        <outlet property="signUpButton" destination="lpC-3j-dOd" id="Xph-rw-SJe"/>
+                        <outlet property="usernameTextField" destination="Lo1-g3-3S3" id="xEC-ZP-X9V"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D7U-3N-8ux" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1390,7 +1392,4 @@
         <image name="sf" width="1500" height="830"/>
         <image name="temp_rating" width="149" height="30"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="MYO-zy-YgY"/>
-    </inferredMetricsTieBreakers>
 </document>
